# dgQuEST

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: QuEST.h  QuEST_precision.h  timer.hpp
sampler/: main.cpp
src/: QuEST.c  QuEST_common.c  QuEST_internal.h
src/cpp/: DAG.cpp  QuEST_backend.cpp  QuEST_backend.h  QuEST_backend_distributed.cpp  QuEST_distributed.cpp  QuEST_gpu_kernel.cu  time_predictor.cpp  time_predictor.h
testcases/: GHZ_QFT-28.c  GHZ_QFT-29.c  GHZ_QFT-30.c  GHZ_QFT-31.c  GHZ_QFT-32.c  GHZ_QFT-33.c  GHZ_QFT-34.c  GHZ_QFT-35.c  GHZ_QFT-36.c  bv-32.c  bv-33.c  bv-34.c  mytimer.hpp  random-32.c  random-33.c  random-34.c  supremecy-32.c  supremecy-33.c  supremecy-34.c
